--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "fs": "^0.0.1-security",
+    "loadsh": "^0.0.4",
     "pinia": "^2.0.33",
     "vant": "^4.0.11",
     "vue": "^3.2.13",
