--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "fs": "^0.0.1-security",
+    "less-loader": "^11.1.3",
     "loadsh": "^0.0.4",
     "pinia": "^2.0.33",
+    "spark-md5": "^3.0.2",
     "vant": "^4.0.11",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
