--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "express-jwt": "^5.3.3",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
